--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     height: 140px;
     width: 140px;
     margin-top: -50px;
+    border-radius: 15px;
 }
 
 .bannerimg{
@@ -24,8 +25,8 @@
 }
 .canvas{
     max-width: 319px;
-    background: white;
-    height: 539px;
+    background: rgb(0, 0, 0);
+    max-height:725px;
     border-radius: 40px 40px 40px 40px;
     display: flex;
     flex-direction: column;
@@ -54,6 +55,7 @@ p {
     margin-block-end: 1em;
     margin-inline-start: 1em;
     margin-inline-end: 1em;
+    color: aliceblue;
 }
 
 .insta-name {
@@ -68,7 +70,7 @@ p {
     font-size: 20px;
     letter-spacing: 0.5px;
     line-height: 1;
-    color: #2d303a;
+    color: #d2d5e0;
     margin: 0;
 }
 
